--- a/_config.yml
+++ b/_config.yml
@@ -7,12 +7,10 @@ first_name: CAP
 middle_name: 
 last_name: LAB
 email: Ling.CAP.Lab@umich.edu
-description: > 
-  # the ">" symbol means to ignore newlines until "footer_text:"
-
-Welcome to the Computation, Acquisition, and Processing Lab!
-footer_text: >   
-  # Powered by <a href="https://jekyllrb.com/" target="_blank">Jekyll</a> with <a href="https://github.com/alshedivat/al-folio">al-folio</a> theme.
+description: >
+  Welcome to the Computation, Acquisition, and Processing Lab!
+footer_text: >
+  Powered by <a href="https://jekyllrb.com/" target="_blank">Jekyll</a> with <a href="https://github.com/alshedivat/al-folio">al-folio</a> theme.
   
 keywords: jekyll, jekyll-theme, academic-website, portfolio-website # add your own keywords or leave empty
 lang: en # the language of your site (for example: en, fr, cn, ru, etc.)
