--- a/_config.yml
+++ b/_config.yml
@@ -3,15 +3,15 @@
 # -----------------------------------------------------------------------------
 
 title: UMich CAP Lab # the website title (if blank, full name will be used instead)
-first_name: CAP 
-middle_name: 
+first_name: CAP
+middle_name:
 last_name: LAB
 email: Ling.CAP.Lab@umich.edu
 description: >
   Welcome to the Computation, Acquisition, and Processing Lab!
 footer_text: >
   Powered by <a href="https://jekyllrb.com/" target="_blank">Jekyll</a> with <a href="https://github.com/alshedivat/al-folio">al-folio</a> theme.
-  
+
 keywords: jekyll, jekyll-theme, academic-website, portfolio-website # add your own keywords or leave empty
 lang: en # the language of your site (for example: en, fr, cn, ru, etc.)
 icon: 🎓 # the emoji used as the favicon (alternatively, provide image name in /assets/img/)
@@ -48,7 +48,7 @@ rss_icon: true
 
 navbar_fixed: true
 footer_fixed: true
-search_enabled: true
+search_enabled: false
 socials_in_search: true
 bib_search: true
 
@@ -227,7 +227,7 @@ kramdown:
       start_line: 1
 
 # Includes & excludes
-include: 
+include:
   - _pages/about.md
   - _pages/projects.md
   - _pages/profiles.md
