--- a/_config.yml
+++ b/_config.yml
@@ -49,7 +49,7 @@ rss_icon: true
 navbar_fixed: true
 footer_fixed: true
 search_enabled: false
-socials_in_search: true
+socials_in_search: false
 bib_search: true
 
 # Dimensions
