--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -3,8 +3,8 @@
   "imageSize": 100,
   "commit": false,
   "contributorsPerLine": 7,
-  "projectName": "al-folio",
-  "projectOwner": "alshedivat",
+  "projectName": "um-cap-lab",
+  "projectOwner": "huteng",
   "repoType": "github",
   "repoHost": "https://github.com",
   "badgeTemplate": "[core_contributors]: https://img.shields.io/badge/core_contributors-<%= contributors.length %>-orange.svg 'Number of core contributors'",
@@ -12,32 +12,11 @@
   "skipCi": true,
   "contributors": [
     {
-      "login": "alshedivat",
-      "name": "Maruan",
-      "avatar_url": "https://avatars.githubusercontent.com/u/2126561?v=4",
-      "profile": "http://maruan.alshedivat.com",
+      "login": "huteng",
+      "name": "Huteng Dai",
+      "avatar_url": "https://um-cap-lab.github.io/assets/img/huteng.jpg",
+      "profile": "https://hutengdai.com",
       "contributions": ["design", "code"]
-    },
-    {
-      "login": "rohandebsarkar",
-      "name": "Rohan Deb Sarkar",
-      "avatar_url": "https://avatars.githubusercontent.com/u/50144004?v=4",
-      "profile": "http://rohandebsarkar.github.io",
-      "contributions": ["code"]
-    },
-    {
-      "login": "pourmand1376",
-      "name": "Amir Pourmand",
-      "avatar_url": "https://avatars.githubusercontent.com/u/32064808?v=4",
-      "profile": "https://amirpourmand.ir",
-      "contributions": ["code"]
-    },
-    {
-      "login": "george-gca",
-      "name": "George",
-      "avatar_url": "https://avatars.githubusercontent.com/u/31376482?v=4",
-      "profile": "https://george-gca.github.io/",
-      "contributions": ["code"]
     }
   ],
   "commitConvention": "angular"
