--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ email: Ling.CAP.Lab@umich.edu
 description: >
   Welcome to the Computation, Acquisition, and Processing Lab!
 footer_text: >
-  {{ site.time | date: '%Y' }} UMich CAP Lab. All rights reserved.
+  2025 UM CAP Lab. All rights reserved.
 
 keywords: language, computational linguistics, language acquisition, phonology # add your own keywords or leave empty
 lang: en # the language of your site (for example: en, fr, cn, ru, etc.)
