--- a/package.json
+++ b/package.json
@@ -1,8 +1,7 @@
 {
   "devDependencies": {
-    "@shopify/prettier-plugin-liquid": "1.4.0",
-    "prettier": "3.1.1",
-    "mkdirp": "^1.0.0"
-
+    "@shopify/prettier-plugin-liquid": "^1.4.0",
+    "mkdirp": "^1.0.0",
+    "prettier": "3.1.1"
   }
 }
