--- a/_config.yml
+++ b/_config.yml
@@ -408,10 +408,7 @@ external_links:
 #   convert -version
 imagemagick:
   enabled: true # enables responsive images for your site (recommended, see https://github.com/alshedivat/al-folio/issues/537)
-  widths:
-    - 480
-    - 800
-    - 1400
+  widths: [320, 640, 960, 1280] # Example widths for responsive images
   input_directories:
     - assets/img/
   input_formats:
